<resources>
    <string name="app_name">User Management App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="all_users">All Users</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
