<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignupActivity"
    android:background="@color/background">

    <ImageView
        android:layout_width="129dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/signup"
        android:src="@drawable/user_icon" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableStart="@drawable/user_icon"
        android:padding="10dp"
        android:background="@drawable/input_background" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/email_icon"
        android:padding="10dp"
        android:background="@drawable/input_background" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/password_icon"
        android:padding="10dp"
        android:background="@drawable/input_background"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/password_icon"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/input_background"
        android:inputType="textPassword" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btnSignup"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:drawableLeft="@drawable/submit_icon"
        android:text="@string/signup"
        android:textColor="@color/white" />
</LinearLayout>
